--- a/home.html
+++ b/home.html
@@ -78,7 +78,7 @@
                     Staff Name
                 </span>
                 <span> | </span>
-                <span id="incompleteReason">
+                <span id="staffPosition">
                     Position
                 </span>
             </button>
