Design layout table to form

--- a/forms/delivery_form.html
+++ b/forms/delivery_form.html
@@ -180,7 +180,7 @@
         <div class="row">
             <div class="productInfo">
                 <p>รายละเอียดสินค้า</p>
-                <table>
+                <table class="product-table">
                     <tr>
                         <th>สินค้า</th>
                         <th>ยี่ห้อ</th>
@@ -220,7 +220,7 @@
                 <label for="productEquip">ไม่มี</label>
                 <input type="radio" id="productEquip" name="productEquip">
                 <label for="productEquip">มี</label>
-                <table>
+                <table class="product-table">
                     <tr>
                         <th>รหัสอุปกรณ์</th>
                         <th>ชื่ออุปกรณ์</th>
@@ -231,7 +231,7 @@
                             <input type="number" class="table-field" id="equipmentID" name="equipmentID">
                         </td>
                         <td>
-                            <input type="text" class="table-field" id="equipmentName" name="equipmentName">
+                            <input type="text" class="table-field-long" id="equipmentName" name="equipmentName">
                         </td>
                         <td>
                             <input type="number" class="table-field" id="equipmentQty" name="equipmentQty">
