--- a/forms/installation_ac_form.html
+++ b/forms/installation_ac_form.html
@@ -225,34 +225,46 @@
                 <p>รายละเอียดสินค้า</p>
                 <table>
                     <tr>
-                        <th>สินค้า</th>
-                        <th>ยี่ห้อ</th>
-                        <th>รุ่น คอยล์เย็น</th>
-                        <th>รุ่น คอยล์ร้อน</th>
-                        <th>หมายเลขเครื่อง คอยล์เย็น</th>
-                        <th>หมายเลขเครื่อง คอยล์ร้อน</th>
-                    </tr>
-                    <tr>
+                        <td>สินค้า</td>
                         <td>
-                            <select class="dropdown-field-sat" id="productName" name="productName">
+                            <select class="dropdown-field" id="productName" name="productName">
                                 <option value="acSet">แอร์</option>
                             </select>
                         </td>
+                        <td>ยี่ห้อ</td>
                         <td>
                             <select id="productBrand" class="dropdown-field" name="productBrand">
                                 <option value="Brand">Product Brand</option>
                                 <!-- data from brand table -->
                             </select>
                         </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span>คอยล์เย็น</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>รุ่น</td>
                         <td>
                             <input type="text" class="table-field" id="productModelIn" name="productModelIn">
                         </td>
-                        <td>
-                            <input type="text" class="table-field" id="productModelOut" name="productModelOut">
-                        </td>
+                        <td>หมายเลขเครื่อง</td>
                         <td>
                             <input type="text" class="table-field" id="productSNIn" name="productSNIn">
                         </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span>คอยล์ร้อน</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>รุ่น</td>
+                        <td>
+                            <input type="text" class="table-field" id="productModelOut" name="productModelOut">
+                        </td>
+                        <td>หมายเลขเครื่อง</td>
                         <td>
                             <input type="text" class="table-field" id="productSNOut" name="productSNOut">
                         </td>
@@ -267,7 +279,7 @@
                 <label for="productEquip">ไม่มี</label>
                 <input type="radio" id="productEquip" name="productEquip">
                 <label for="productEquip">มี</label>
-                <table>
+                <table class="product-table">
                     <tr>
                         <th>รหัสอุปกรณ์</th>
                         <th>ชื่ออุปกรณ์</th>
@@ -278,7 +290,7 @@
                             <input type="number" class="table-field" id="equipmentID" name="equipmentID">
                         </td>
                         <td>
-                            <input type="text" class="table-field" id="equipmentName" name="equipmentName">
+                            <input type="text" class="table-field-long" id="equipmentName" name="equipmentName">
                         </td>
                         <td>
                             <input type="number" class="table-field" id="equipmentQty" name="equipmentQty">
