--- a/forms/installation_wh_form.html
+++ b/forms/installation_wh_form.html
@@ -222,28 +222,28 @@
                 <p>รายละเอียดสินค้า</p>
                 <table>
                     <tr>
-                        <th>สินค้า</th>
-                        <th>ยี่ห้อ</th>
-                        <th>รุ่น</th>
-                        <th>หมายเลขเครื่อง</th>
-                    </tr>
-                    <tr>
+                        <td>สินค้า</td>
                         <td>
-                            <select class="dropdown-field-sat" id="productName" name="productName">
+                            <select class="dropdown-field-short" id="productName" name="productName">
                                 <option value="whSet">เครื่องทำน้ำอุ่น</option>
                             </select>
                         </td>
+                        <td>ยี่ห้อ</td>
                         <td>
-                            <select id="productBrand" class="dropdown-field" name="productBrand">
+                            <select id="productBrand" class="dropdown-field-short" name="productBrand">
                                 <option value="Brand">Product Brand</option>
                                 <!-- data from brand table -->
                             </select>
                         </td>
+                    </tr>
+                    <tr>
+                        <td>รุ่น</td>
                         <td>
-                            <input type="text" class="table-field" id="productModel" name="productModel">
+                            <input type="text" class="table-field-short" id="productModel" name="productModel">
                         </td>
+                        <td>หมายเลขเครื่อง</td>
                         <td>
-                            <input type="text" class="table-field" id="productSN" name="productSN">
+                            <input type="text" class="table-field-short" id="productSN" name="productSN">
                         </td>
                     </tr>
                 </table>
@@ -256,7 +256,7 @@
                 <label for="productEquip">ไม่มี</label>
                 <input type="radio" id="productEquip" name="productEquip">
                 <label for="productEquip">มี</label>
-                <table>
+                <table class="product-table">
                     <tr>
                         <th>รหัสอุปกรณ์</th>
                         <th>ชื่ออุปกรณ์</th>
@@ -267,7 +267,7 @@
                             <input type="number" class="table-field" id="equipmentID" name="equipmentID">
                         </td>
                         <td>
-                            <input type="text" class="table-field" id="equipmentName" name="equipmentName">
+                            <input type="text" class="table-field-long" id="equipmentName" name="equipmentName">
                         </td>
                         <td>
                             <input type="number" class="table-field" id="equipmentQty" name="equipmentQty">
