try fetching notification

--- a/home.html
+++ b/home.html
@@ -92,7 +92,7 @@
     <div class="main" id="mainContent">First content</div>
 
     <!-- RIGTH -->
-    <div class="rightsidenav">
+    <div class="rightsidenav" id="notificationBar">
         <h3>งานติดตั้ง</h3>
         <h4>แอร์</h4>
         <div class="card">
