--- a/view_pages/repairing_view.html
+++ b/view_pages/repairing_view.html
@@ -74,7 +74,7 @@
                         <tr>
                             <td>เลขที่งานซ่อม</td>
                             <td>
-                                <input type="number" id="deliveryJobID" name="deliveryJobID" readonly> <!-- auto generate -->
+                                <input type="number" id="deliveryJobID" name="deliveryJobID"> <!-- auto generate -->
                             </td>
                         </tr>
                         <tr>
@@ -108,7 +108,7 @@
                             <!-- display only -->
                             <td>ชื่อพนักงาน</td>
                             <td>
-                                <input type="text" id="staffName" name="staffName" readonly>
+                                <input type="text" id="staffName" name="staffName">
                             </td>
                         </tr>
                     </table>
@@ -125,7 +125,7 @@
                             รหัสลูกค้า
                         </td>
                         <td>
-                            <input type="number" id="customerID" name="customerID" readonly>
+                            <input type="number" id="customerID" name="customerID">
                         </td>
                         <td>
                             <!-- pop up modal form when search -->
@@ -173,13 +173,13 @@
                             ชื่อ-นามสกุล ลูกค้า
                         </td>
                         <td>
-                            <input type="text" id="customerName" name="customerName" readonly>
+                            <input type="text" id="customerName" name="customerName">
                         </td>
                         <td>
                             หมายเลขโทรศัพท์
                         </td>
                         <td>
-                            <input type="text" id="customerTel" name="customerTel" readonly>
+                            <input type="text" id="customerTel" name="customerTel">
                         </td>
                     </tr>
                     <tr>
@@ -187,7 +187,7 @@
                             ที่อยู่
                         </td>
                         <td colspan="3">
-                            <textarea id="customerAddress" name="customerAddress" readonly></textarea>
+                            <textarea id="customerAddress" name="customerAddress"></textarea>
                         </td>
                     </tr>
                 </table>
