--- a/view_pages/returning_view.html
+++ b/view_pages/returning_view.html
@@ -18,7 +18,7 @@
                         </td>
                         <td>เลขที่ส่งคืนบริษัท</td>
                         <td>
-                            <input type="number" id="deliveryJobID" name="deliveryJobID" readonly> <!-- auto generate -->
+                            <input type="number" id="deliveryJobID" name="deliveryJobID"> <!-- auto generate -->
                         </td>
                     </tr>
                 </table>
