--- a/forms/brand_form.html
+++ b/forms/brand_form.html
@@ -14,7 +14,7 @@
                     <td>รหัสยี่ห้อ</td>
                     <td>
                         <!-- auto generate -->
-                        <input type="number" id="brandID" name="brandID">
+                        <input type="number" id="brandID" name="brandID" readonly>
                     </td>
                 </tr>
                 <tr>
