--- a/forms/customer_form.html
+++ b/forms/customer_form.html
@@ -15,7 +15,7 @@
                         <td>รหัสลูกค้า</td>
                         <td>
                             <!-- auto generate -->
-                            <input type="number" id="customerID" name="customerID">
+                            <input type="number" id="customerID" name="customerID" readonly>
                         </td>
                         <td>
                             <input type="radio" id="customerType" name="customerType">
