--- a/forms/delivery_form.html
+++ b/forms/delivery_form.html
@@ -34,7 +34,7 @@
                             <!-- display only -->
                             <td>ชื่อพนักงาน</td>
                             <td>
-                                <input type="text" id="staffName" name="staffName">
+                                <input type="text" id="staffName" name="staffName" readonly>
                             </td>
                         </tr>
                         <tr>
@@ -64,7 +64,8 @@
                         <tr>
                             <td>เลขที่ใบจัดส่ง</td>
                             <td>
-                                <input type="number" id="deliveryJobID" name="deliveryJobID"> <!-- auto generate -->
+                                <input type="number" id="deliveryJobID" name="deliveryJobID" readonly>
+                                <!-- auto generate -->
                             </td>
                         </tr>
                         <tr>
@@ -91,7 +92,7 @@
                             <!-- display only -->
                             <td>ชื่อพนักงาน</td>
                             <td>
-                                <input type="text" id="staffName" name="staffName">
+                                <input type="text" id="staffName" name="staffName" readonly>
                             </td>
                         </tr>
                     </table>
@@ -108,7 +109,7 @@
                             รหัสลูกค้า
                         </td>
                         <td>
-                            <input type="number" class="table-field" id="customerID" name="customerID">
+                            <input type="number" class="table-field" id="customerID" name="customerID" readonly>
                         </td>
                         <td>
                             <!-- pop up modal form when search -->
@@ -118,32 +119,12 @@
                                 <div class="modal-content">
                                     <!-- searching by id, name, phone number  -->
                                     <span class="close">&times;</span>
-                                    <table>
-                                        <tr>
-                                            <td>
-                                                รหัสลูกค้า
-                                            </td>
-                                            <td>
-                                                <input type="number" id="customerID" name="customerID">
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                ชื่อ-นามสกุล ลูกค้า
-                                            </td>
-                                            <td>
-                                                <input type="text" id="customerName" name="customerName">
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                หมายเลขโทรศัพท์
-                                            </td>
-                                            <td>
-                                                <input type="text" id="customerTel" name="customerTel">
-                                            </td>
-                                        </tr>
-                                    </table>
+                                    <select id="searchDropdown" name="searchDropdown">
+                                        <option value="customerID">รหัสลูกค้า</option>
+                                        <option value="customerName">ชื่อ-นามสกุล ลูกค้า</option>
+                                        <option value="customerTel">หมายเลขโทรศัพท์</option>
+                                    </select>
+                                    <input type="search" id="searchField" name="searchField">
                                     <input class="btn" type="submit" value="ค้นหาลูกค้า">
                                 </div>
                             </div>
@@ -157,13 +138,13 @@
                             ชื่อ-นามสกุล ลูกค้า
                         </td>
                         <td>
-                            <input type="text" class="table-field" id="customerName" name="customerName">
+                            <input type="text" class="table-field" id="customerName" name="customerName" readonly>
                         </td>
                         <td>
                             หมายเลขโทรศัพท์
                         </td>
                         <td>
-                            <input type="text" class="table-field" id="customerTel" name="customerTel">
+                            <input type="text" class="table-field" id="customerTel" name="customerTel" readonly>
                         </td>
                     </tr>
                     <tr>
@@ -171,7 +152,7 @@
                             ที่อยู่
                         </td>
                         <td colspan="3">
-                            <textarea id="customerAddress" name="customerAddress"></textarea>
+                            <textarea id="customerAddress" name="customerAddress" readonly></textarea>
                         </td>
                     </tr>
                 </table>
@@ -208,7 +189,7 @@
                 <input class="add-btn" type="submit" value="เพิ่ม">
                 <div class="qty">
                     <span>จำนวนสินค้า</span>
-                    <input type="number" id="productQty" name="productQty">
+                    <span id="productQty" name="productQty">0</span>
                     <span>ชิ้น</span>
                 </div>
             </div>
@@ -231,7 +212,8 @@
                             <input type="number" class="table-field" id="equipmentID" name="equipmentID">
                         </td>
                         <td>
-                            <input type="text" class="table-field-long" id="equipmentName" name="equipmentName">
+                            <input type="text" class="table-field-long" id="equipmentName" name="equipmentName"
+                                readonly>
                         </td>
                         <td>
                             <input type="number" class="table-field" id="equipmentQty" name="equipmentQty">
@@ -241,7 +223,7 @@
                 <input class="add-btn" type="submit" value="เพิ่ม">
                 <div class="qty">
                     <span>จำนวนอุปกรณ์</span>
-                    <input type="number" id="equipQty" name="equipQty">
+                    <span id="equipQty" name="equipQty">0</span>
                     <span>ชิ้น</span>
                 </div>
             </div>
