--- a/forms/equipment_form.html
+++ b/forms/equipment_form.html
@@ -14,7 +14,7 @@
                     <td>รหัสอุปกรณ์</td>
                     <td>
                         <!-- auto generate -->
-                        <input type="number" id="equipID" name="equipID">
+                        <input type="number" id="equipID" name="equipID" readonly>
                     </td>
                 </tr>
                 <tr>
