--- a/forms/installation_sat_form.html
+++ b/forms/installation_sat_form.html
@@ -14,16 +14,16 @@
                     <table>
                         <tr>
                             <td>
-                                <input type="radio" id="partnerType" name="partnerType" value="satSet">
-                                <label for="partnerType">ติดตั้งใหม่</label>
+                                <input type="radio" id="installType" name="installType" value="satSet">
+                                <label for="installType">ติดตั้งใหม่</label>
                             </td>
                             <td>
-                                <input type="radio" id="partnerType" name="partnerType" value="satFix">
-                                <label for="partnerType">แก้ไขและซ่อมแซม</label>
+                                <input type="radio" id="installType" name="installType" value="satFix">
+                                <label for="installType">แก้ไขและซ่อมแซม</label>
                             </td>
                             <td>
-                                <input type="radio" id="partnerType" name="partnerType" value="satAddOn">
-                                <label for="partnerType">เพิ่มจุดรับสัญญาณ</label>
+                                <input type="radio" id="installType" name="installType" value="satAddOn">
+                                <label for="installType">เพิ่มจุดรับสัญญาณ</label>
                             </td>
                         </tr>
                     </table>
@@ -75,7 +75,7 @@
                                 <!-- display only -->
                                 <td>ชื่อพนักงาน</td>
                                 <td>
-                                    <input type="text" id="staffName" name="staffName">
+                                    <input type="text" id="staffName" name="staffName" readonly>
                                 </td>
                             </tr>
                             <tr>
@@ -105,7 +105,7 @@
                             <tr>
                                 <td>เลขที่ใบงานติดตั้ง</td>
                                 <td>
-                                    <input type="text" id="installJobID" name="installJobID">
+                                    <input type="text" id="installJobID" name="installJobID" readonly>
                                     <!-- auto generate -->
                                 </td>
                             </tr>
@@ -133,7 +133,7 @@
                                 <!-- display only -->
                                 <td>ชื่อพนักงาน</td>
                                 <td>
-                                    <input type="text" id="staffName" name="staffName">
+                                    <input type="text" id="staffName" name="staffName" readonly>
                                 </td>
                             </tr>
                         </table>
@@ -151,7 +151,7 @@
                                 รหัสลูกค้า
                             </td>
                             <td>
-                                <input type="number" id="customerID" name="customerID">
+                                <input type="number" id="customerID" name="customerID" readonly>
                             </td>
                             <td>
                                 <!-- pop up modal form when search -->
@@ -200,13 +200,13 @@
                                 ชื่อ-นามสกุล ลูกค้า
                             </td>
                             <td>
-                                <input type="text" id="customerName" name="customerName">
+                                <input type="text" id="customerName" name="customerName" readonly>
                             </td>
                             <td>
                                 หมายเลขโทรศัพท์
                             </td>
                             <td>
-                                <input type="text" id="customerTel" name="customerTel">
+                                <input type="text" id="customerTel" name="customerTel" readonly>
                             </td>
                         </tr>
                         <tr>
@@ -214,7 +214,7 @@
                                 ที่อยู่
                             </td>
                             <td colspan="3">
-                                <textarea id="customerAddress" name="customerAddress"></textarea>
+                                <textarea id="customerAddress" name="customerAddress" readonly></textarea>
                             </td>
                         </tr>
                     </table>
@@ -268,7 +268,7 @@
                     <input class="add-btn" type="submit" value="เพิ่ม">
                     <div class="qty">
                         <span>จำนวนกล่องรับสัญญาณ</span>
-                        <input type="number" id="productQty" name="productQty">
+                        <span id="productQty" name="productQty">0</span>
                         <span>กล่อง</span>
                     </div>
                 </div>
@@ -291,7 +291,7 @@
                                 <input type="number" class="table-field" id="equipmentID" name="equipmentID">
                             </td>
                             <td>
-                                <input type="text" class="table-field-long" id="equipmentName" name="equipmentName">
+                                <input type="text" class="table-field-long" id="equipmentName" name="equipmentName" readonly>
                             </td>
                             <td>
                                 <input type="number" class="table-field" id="equipmentQty" name="equipmentQty">
@@ -301,7 +301,7 @@
                     <input class="add-btn" type="submit" value="เพิ่ม">
                     <div class="qty">
                         <span>จำนวนอุปกรณ์</span>
-                        <input type="number" id="equipQty" name="equipQty">
+                        <span id="equipQty" name="equipQty">0</span>
                         <span>ชิ้น</span>
                     </div>
                 </div>
