--- a/forms/installation_wh_form.html
+++ b/forms/installation_wh_form.html
@@ -13,12 +13,12 @@
                 <table>
                     <tr>
                         <td>
-                            <input type="radio" id="partnerType" name="partnerType" value="whSet">
-                            <label for="partnerType">ติดตั้งใหม่</label>
+                            <input type="radio" id="installType" name="installType" value="whSet">
+                            <label for="installType">ติดตั้งใหม่</label>
                         </td>
                         <td>
-                            <input type="radio" id="partnerType" name="partnerType" value="whFix">
-                            <label for="partnerType">แก้ไขและซ่อมแซม</label>
+                            <input type="radio" id="installType" name="installType" value="whFix">
+                            <label for="installType">แก้ไขและซ่อมแซม</label>
                         </td>
                     </tr>
                 </table>
@@ -70,7 +70,7 @@
                             <!-- display only -->
                             <td>ชื่อพนักงาน</td>
                             <td>
-                                <input type="text" id="staffName" name="staffName">
+                                <input type="text" id="staffName" name="staffName" readonly>
                             </td>
                         </tr>
                         <tr>
@@ -100,7 +100,7 @@
                         <tr>
                             <td>เลขที่ใบงานติดตั้ง</td>
                             <td>
-                                <input type="text" id="installJobID" name="installJobID"> <!-- auto generate -->
+                                <input type="text" id="installJobID" name="installJobID" readonly> <!-- auto generate -->
                             </td>
                         </tr>
                         <tr>
@@ -127,7 +127,7 @@
                             <!-- display only -->
                             <td>ชื่อพนักงาน</td>
                             <td>
-                                <input type="text" id="staffName" name="staffName">
+                                <input type="text" id="staffName" name="staffName" readonly>
                             </td>
                         </tr>
                     </table>
@@ -146,7 +146,7 @@
                             รหัสลูกค้า
                         </td>
                         <td>
-                            <input type="number" id="customerID" name="customerID">
+                            <input type="number" id="customerID" name="customerID" readonly>
                         </td>
                         <td>
                             <!-- pop up modal form when search -->
@@ -195,13 +195,13 @@
                             ชื่อ-นามสกุล ลูกค้า
                         </td>
                         <td>
-                            <input type="text" id="customerName" name="customerName">
+                            <input type="text" id="customerName" name="customerName" readonly>
                         </td>
                         <td>
                             หมายเลขโทรศัพท์
                         </td>
                         <td>
-                            <input type="text" id="customerTel" name="customerTel">
+                            <input type="text" id="customerTel" name="customerTel" readonly>
                         </td>
                     </tr>
                     <tr>
@@ -209,7 +209,7 @@
                             ที่อยู่
                         </td>
                         <td colspan="3">
-                            <textarea id="customerAddress" name="customerAddress"></textarea>
+                            <textarea id="customerAddress" name="customerAddress" readonly></textarea>
                         </td>
                     </tr>
                 </table>
@@ -267,7 +267,7 @@
                             <input type="number" class="table-field" id="equipmentID" name="equipmentID">
                         </td>
                         <td>
-                            <input type="text" class="table-field-long" id="equipmentName" name="equipmentName">
+                            <input type="text" class="table-field-long" id="equipmentName" name="equipmentName" readonly>
                         </td>
                         <td>
                             <input type="number" class="table-field" id="equipmentQty" name="equipmentQty">
@@ -277,7 +277,7 @@
                 <input class="add-btn" type="submit" value="เพิ่ม">
                 <div class="qty">
                     <span>จำนวนอุปกรณ์</span>
-                    <input type="number" id="equipQty" name="equipQty">
+                    <span id="equipQty" name="equipQty">0</span>
                     <span>ชิ้น</span>
                 </div>
             </div>
