--- a/forms/service_partner_form.html
+++ b/forms/service_partner_form.html
@@ -15,7 +15,7 @@
                         <td>รหัสศูนย์บริการ</td>
                         <td>
                             <!-- auto generate -->
-                            <input type="number" id="partnerID" name="partnerID">
+                            <input type="number" id="partnerID" name="partnerID" readonly>
                         </td>
                         <td>
                             <input type="radio" id="partnerType" name="partnerType">
