--- a/forms/sp_form.html
+++ b/forms/sp_form.html
@@ -14,7 +14,7 @@
                     <td>รหัสอะไหล่</td>
                     <td>
                         <!-- auto generate -->
-                        <input type="number" id="spID" name="spID">
+                        <input type="number" id="spID" name="spID" readonly>
                     </td>
                 </tr>
                 <tr>
