--- a/forms/staff_form.html
+++ b/forms/staff_form.html
@@ -15,7 +15,7 @@
                         <td>รหัสพนักงาน</td>
                         <td>
                             <!-- auto generate -->
-                            <input type="number" id="staffID" name="staffID">
+                            <input type="number" id="staffID" name="staffID" readonly>
                         </td>
                     </tr>
                     <tr>
