--- a/forms/supplier_form.html
+++ b/forms/supplier_form.html
@@ -15,7 +15,7 @@
                         <td>รหัสผู้จัดจำหน่าย</td>
                         <td>
                             <!-- auto generate -->
-                            <input type="number" id="supplierID" name="supplierID">
+                            <input type="number" id="supplierID" name="supplierID" readonly>
                         </td>
                         <td>
                             <input type="radio" id="supplierType" name="supplierType">
