--- a/view_pages/import_view.html
+++ b/view_pages/import_view.html
@@ -19,7 +19,7 @@
                         <td>เลขที่เอกสาร</td>
                         <td>
                             <!-- auto generate -->
-                            <input type="number" id="importDocID" name="importDocID" readonly>
+                            <input type="number" id="importDocID" name="importDocID">
                         </td>
                     </tr>
                     <tr>
@@ -36,7 +36,7 @@
                     <tr>
                         <td>รหัสผู้จัดจำหน่าย</td>
                         <td>
-                            <input type="number" id="supplierID" name="supplierID" readonly>
+                            <input type="number" id="supplierID" name="supplierID">
                         </td>
                         <td>
                             <!-- pop up modal form when search -->
@@ -66,7 +66,7 @@
                     <tr>
                         <td>ชื่อผู้จัดจำหน่าย</td>
                         <td colspan="3">
-                            <input type="text" class="long-name" id="importSupplier" name="importSupplier" readonly>
+                            <input type="text" class="long-name" id="importSupplier" name="importSupplier">
                         </td>
                     </tr>
                 </table>
@@ -89,36 +89,12 @@
                             <input type="number" class="table-field" id="importID" name="importID">
                         </td>
                         <td>
-                            <!-- display only -->
-                            <input type="text" class="table-field" id="importName" name="importName" readonly>
+                            <!-- diimportlay only -->
+                            <input type="text" class="table-field" id="importName" name="importName">
                         </td>
                         <td>
-                            <!-- display only -->
-                            <input type="text" class="table-field" id="importFor" name="importFor" readonly>
-                        </td>
-                        <td>
-                            <input type="number" class="table-field" id="importQty" name="importQty">
-                        </td>
-                        <td>
-                            <input type="number" class="table-field" id="importCost" name="importCost">
-                        </td>
-                        <td>
-                            <!-- cost*qty -->
-                            <input type="number" class="table-field" id="importCost" name="importTotalCost">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <!-- auto generate -->
-                            <input type="number" class="table-field" id="importID" name="importID">
-                        </td>
-                        <td>
-                            <!-- display only -->
-                            <input type="text" class="table-field" id="importName" name="importName" readonly>
-                        </td>
-                        <td>
-                            <!-- display only -->
-                            <input type="text" class="table-field" id="importFor" name="importFor" readonly>
+                            <!-- diimportlay only -->
+                            <input type="text" class="table-field" id="importFor" name="importFor">
                         </td>
                         <td>
                             <input type="number" class="table-field" id="importQty" name="importQty">
@@ -137,12 +113,36 @@
                             <input type="number" class="table-field" id="importID" name="importID">
                         </td>
                         <td>
-                            <!-- display only -->
-                            <input type="text" class="table-field" id="importName" name="importName" readonly>
+                            <!-- diimportlay only -->
+                            <input type="text" class="table-field" id="importName" name="importName">
                         </td>
                         <td>
-                            <!-- display only -->
-                            <input type="text" class="table-field" id="importFor" name="importFor" readonly>
+                            <!-- diimportlay only -->
+                            <input type="text" class="table-field" id="importFor" name="importFor">
+                        </td>
+                        <td>
+                            <input type="number" class="table-field" id="importQty" name="importQty">
+                        </td>
+                        <td>
+                            <input type="number" class="table-field" id="importCost" name="importCost">
+                        </td>
+                        <td>
+                            <!-- cost*qty -->
+                            <input type="number" class="table-field" id="importCost" name="importTotalCost">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <!-- auto generate -->
+                            <input type="number" class="table-field" id="importID" name="importID">
+                        </td>
+                        <td>
+                            <!-- diimportlay only -->
+                            <input type="text" class="table-field" id="importName" name="importName">
+                        </td>
+                        <td>
+                            <!-- diimportlay only -->
+                            <input type="text" class="table-field" id="importFor" name="importFor">
                         </td>
                         <td>
                             <input type="number" class="table-field" id="importQty" name="importQty">
