--- a/view_pages/installation_ac_view.html
+++ b/view_pages/installation_ac_view.html
@@ -12,17 +12,16 @@
             <div class="installing-type">
                 <table>
                     <tr>
-                        <!-- display only -->
                         <td>
-                            <input type="radio" id="installType" name="installType" value="acSet">
+                            <input type="radio" id="installType" name="installType" value="acSet" readonly>
                             <label for="installType">ติดตั้งใหม่</label>
                         </td>
                         <td>
-                            <input type="radio" id="installType" name="installType" value="acFix">
+                            <input type="radio" id="installType" name="installType" value="acFix" readonly>
                             <label for="installType">แก้ไขและซ่อมแซม</label>
                         </td>
                         <td>
-                            <input type="radio" id="installType" name="installType" value="acClean">
+                            <input type="radio" id="installType" name="installType" value="acClean" readonly>
                             <label for="installType">ล้างแอร์</label>
                         </td>
                     </tr>
@@ -40,11 +39,10 @@
                     <tr>
                         <td>เลขที่ใบงานติดตั้ง</td>
                         <td>
-                            <!-- display only -->
-                            <input type="text" id="refJobID" name="refJobID">
+                            <input type="text" id="refJobID" name="refJobID" readonly>
                         </td>
                         <td>
-                            <button class="showRef-btn" id="showRefButton">แสดงข้อมูล</button>
+                            <button class="showRef-btn" id="showRefButton" disabled>แสดงข้อมูล</button>
                         </td>
                     </tr>
                 </table>
@@ -58,8 +56,7 @@
                         <tr>
                             <td>วันที่-เวลา ขาย</td>
                             <td>
-                                <!-- display only -->
-                                <input type="datetime" id="purchaseDate" name="purchaseDate">
+                                <input type="datetime" id="purchaseDate" name="purchaseDate" readonly>
                             </td>
                         </tr>
                         <tr>
@@ -77,7 +74,7 @@
                             <!-- display only -->
                             <td>ชื่อพนักงาน</td>
                             <td>
-                                <input type="text" id="staffName" name="staffName">
+                                <input type="text" id="staffName" name="staffName" readonly>
                             </td>
                         </tr>
                         <tr>
@@ -107,15 +104,14 @@
                         <tr>
                             <td>เลขที่ใบงานติดตั้ง</td>
                             <td>
-                                <!-- display only -->
-                                <input type="text" id="installJobID" name="installJobID"> <!-- auto generate -->
+                                <input type="text" id="installJobID" name="installJobID" readonly>
+                                <!-- auto generate -->
                             </td>
                         </tr>
                         <tr>
                             <td>วันที่-เวลา การนัดหมาย</td>
                             <td>
-                                <!-- display only -->
-                                <input type="datetime" id="appointmentDate" name="appointmentDate">
+                                <input type="datetime" id="appointmentDate" name="appointmentDate" readonly>
                             </td>
                         </tr>
                         <tr>
@@ -136,7 +132,7 @@
                             <!-- display only -->
                             <td>ชื่อพนักงาน</td>
                             <td>
-                                <input type="text" id="staffName" name="staffName">
+                                <input type="text" id="staffName" name="staffName" readonly>
                             </td>
                         </tr>
                     </table>
@@ -151,19 +147,16 @@
                 <table>
                     <tr>
                         <td>
-                            <!-- display only -->
                             รหัสลูกค้า
                         </td>
                         <td>
-                            <input type="number" id="customerID" name="customerID">
+                            <input type="number" id="customerID" name="customerID" readonly>
                         </td>
                         <td>
-                            <!-- disable button -->
-                            <input class="btn" type="submit" value="ค้นหาลูกค้า" id="customerSearchButton">
+                            <button class="btn" type="submit" id="customerSearchButton" disabled>ค้นหาลูกค้า</button>
                         </td>
                         <td>
-                            <!-- disable button -->
-                            <input class="btn" type="submit" value="เพิ่มลูกค้าใหม่">
+                            <button class="btn" type="submit" id="customerAddButton" disabled>เพิ่มลูกค้าใหม่</button>
                         </td>
                     </tr>
                     <tr>
@@ -171,15 +164,13 @@
                             ชื่อ-นามสกุล ลูกค้า
                         </td>
                         <td>
-                            <!-- display only -->
-                            <input type="text" id="customerName" name="customerName">
+                            <input type="text" id="customerName" name="customerName" readonly>
                         </td>
                         <td>
                             หมายเลขโทรศัพท์
                         </td>
                         <td>
-                            <!-- display only -->
-                            <input type="text" id="customerTel" name="customerTel">
+                            <input type="text" id="customerTel" name="customerTel" readonly>
                         </td>
                     </tr>
                     <tr>
@@ -187,47 +178,57 @@
                             ที่อยู่
                         </td>
                         <td colspan="3">
-                            <!-- display only -->
-                            <textarea id="customerAddress" name="customerAddress"></textarea>
+                            <textarea id="customerAddress" name="customerAddress" readonly></textarea>
                         </td>
                     </tr>
                 </table>
             </div>
-        </div>
         </div>
         <div class="row">
             <div class="productInfo">
                 <p>รายละเอียดสินค้า</p>
                 <table>
                     <tr>
-                        <th>สินค้า</th>
-                        <th>ยี่ห้อ</th>
-                        <th>รุ่น คอยล์เย็น</th>
-                        <th>รุ่น คอยล์ร้อน</th>
-                        <th>หมายเลขเครื่อง คอยล์เย็น</th>
-                        <th>หมายเลขเครื่อง คอยล์ร้อน</th>
-                    </tr>
-                    <tr>
+                        <td>สินค้า</td>
                         <td>
-                            <select class="dropdown-field-sat" id="productName" name="productName">
+                            <select class="dropdown-field" id="productName" name="productName">
                                 <option value="acSet">แอร์</option>
                             </select>
                         </td>
+                        <td>ยี่ห้อ</td>
                         <td>
                             <select id="productBrand" class="dropdown-field" name="productBrand">
                                 <option value="Brand">Product Brand</option>
                                 <!-- data from brand table -->
                             </select>
                         </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span>คอยล์เย็น</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>รุ่น</td>
                         <td>
                             <input type="text" class="table-field" id="productModelIn" name="productModelIn">
                         </td>
-                        <td>
-                            <input type="text" class="table-field" id="productModelOut" name="productModelOut">
-                        </td>
+                        <td>หมายเลขเครื่อง</td>
                         <td>
                             <input type="text" class="table-field" id="productSNIn" name="productSNIn">
                         </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span>คอยล์ร้อน</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>รุ่น</td>
+                        <td>
+                            <input type="text" class="table-field" id="productModelOut" name="productModelOut">
+                        </td>
+                        <td>หมายเลขเครื่อง</td>
                         <td>
                             <input type="text" class="table-field" id="productSNOut" name="productSNOut">
                         </td>
@@ -242,7 +243,7 @@
                 <label for="productEquip">ไม่มี</label>
                 <input type="radio" id="productEquip" name="productEquip">
                 <label for="productEquip">มี</label>
-                <table>
+                <table class="product-table">
                     <tr>
                         <th>รหัสอุปกรณ์</th>
                         <th>ชื่ออุปกรณ์</th>
@@ -253,7 +254,8 @@
                             <input type="number" class="table-field" id="equipmentID" name="equipmentID">
                         </td>
                         <td>
-                            <input type="text" class="table-field" id="equipmentName" name="equipmentName">
+                            <input type="text" class="table-field-long" id="equipmentName" name="equipmentName"
+                                readonly>
                         </td>
                         <td>
                             <input type="number" class="table-field" id="equipmentQty" name="equipmentQty">
@@ -263,7 +265,7 @@
                 <input class="add-btn" type="submit" value="เพิ่ม">
                 <div class="qty">
                     <span>จำนวนอุปกรณ์</span>
-                    <input type="number" id="equipQty" name="equipQty">
+                    <span id="equipQty" name="equipQty">0</span>
                     <span>ชิ้น</span>
                 </div>
             </div>
@@ -281,13 +283,12 @@
                             </td>
                             <td colspan="2">
                                 <!-- display only -->
-                                <textarea id="instLocation" name="instLocation"></textarea>
+                                <textarea id="instLocation" name="instLocation" readonly></textarea>
                             </td>
                         </tr>
                         <tr>
                             <td>ค่าติดตั้ง</td>
                             <td colspan="2">
-                                <!-- display only -->
                                 <span id="instFee" name="instFee" class="total-price">0</span>
                             </td>
                             <td>
@@ -297,7 +298,6 @@
                         <tr>
                             <td>ราคาอุปกรณ์ทั้งหมด</td>
                             <td colspan="2">
-                                <!-- display only -->
                                 <span id="equipTotalPrice" name="equipTotalPrice" class="total-price">0</span>
                             </td>
                             <td>
@@ -319,7 +319,6 @@
                             <h3>ยอดรวมการชำระเงิน</h3>
                         </td>
                         <td>
-                            <!-- display only -->
                             <h3 id="totalSpent" name="totalSpent">0</h3>
                         </td>
                         <td>
@@ -331,7 +330,6 @@
                             <h3>จำนวนเงินที่จ่าย/วางมัดจำ</h3>
                         </td>
                         <td>
-                            <!-- display only -->
                             <h3 id="totalPaid" name="totalPaid">0</h3>
                         </td>
                         <td>
@@ -343,7 +341,6 @@
                             <h3>จำนวนเงินที่ชำระในการติดตั้ง</h3>
                         </td>
                         <td>
-                            <!-- display only -->
                             <h3 id="instCashOn" name="instCashOn">0</h3>
                         </td>
                         <td>
