--- a/view_pages/installation_sat_view.html
+++ b/view_pages/installation_sat_view.html
@@ -14,15 +14,15 @@
                     <table>
                         <tr>
                             <td>
-                                <input type="radio" id="partnerType" name="partnerType" value="satSet">
+                                <input type="radio" id="partnerType" name="partnerType" value="satSet" readonly>
                                 <label for="partnerType">ติดตั้งใหม่</label>
                             </td>
                             <td>
-                                <input type="radio" id="partnerType" name="partnerType" value="satFix">
+                                <input type="radio" id="partnerType" name="partnerType" value="satFix" readonly>
                                 <label for="partnerType">แก้ไขและซ่อมแซม</label>
                             </td>
                             <td>
-                                <input type="radio" id="partnerType" name="partnerType" value="satAddOn">
+                                <input type="radio" id="partnerType" name="partnerType" value="satAddOn" readonly>
                                 <label for="partnerType">เพิ่มจุดรับสัญญาณ</label>
                             </td>
                         </tr>
@@ -40,10 +40,10 @@
                         <tr>
                             <td>เลขที่ใบงานติดตั้ง</td>
                             <td>
-                                <input type="text" id="refJobID" name="refJobID">
+                                <input type="text" id="refJobID" name="refJobID" readonly>
                             </td>
                             <td>
-                                <button class="showRef-btn" id="showRefButton">แสดงข้อมูล</button>
+                                <button class="showRef-btn" id="showRefButton" disabled>แสดงข้อมูล</button>
                             </td>
                         </tr>
                     </table>
@@ -57,7 +57,7 @@
                             <tr>
                                 <td>วันที่-เวลา ขาย</td>
                                 <td>
-                                    <input type="datetime" id="purchaseDate" name="purchaseDate">
+                                    <input type="datetime" id="purchaseDate" name="purchaseDate" readonly>
                                 </td>
                             </tr>
                             <tr>
@@ -75,7 +75,7 @@
                                 <!-- display only -->
                                 <td>ชื่อพนักงาน</td>
                                 <td>
-                                    <input type="text" id="staffName" name="staffName">
+                                    <input type="text" id="staffName" name="staffName" readonly>
                                 </td>
                             </tr>
                             <tr>
@@ -105,14 +105,14 @@
                             <tr>
                                 <td>เลขที่ใบงานติดตั้ง</td>
                                 <td>
-                                    <input type="text" id="installJobID" name="installJobID">
+                                    <input type="text" id="installJobID" name="installJobID" readonly>
                                     <!-- auto generate -->
                                 </td>
                             </tr>
                             <tr>
                                 <td>วันที่-เวลา การนัดหมาย</td>
                                 <td>
-                                    <input type="datetime" id="appointmentDate" name="appointmentDate">
+                                    <input type="datetime" id="appointmentDate" name="appointmentDate" readonly>
                                 </td>
                             </tr>
                             <tr>
@@ -133,7 +133,7 @@
                                 <!-- display only -->
                                 <td>ชื่อพนักงาน</td>
                                 <td>
-                                    <input type="text" id="staffName" name="staffName">
+                                    <input type="text" id="staffName" name="staffName" readonly>
                                 </td>
                             </tr>
                         </table>
@@ -151,48 +151,15 @@
                                 รหัสลูกค้า
                             </td>
                             <td>
-                                <input type="number" id="customerID" name="customerID">
+                                <input type="number" id="customerID" name="customerID" readonly>
                             </td>
                             <td>
-                                <!-- pop up modal form when search -->
-                                <input class="btn" type="submit" value="ค้นหาลูกค้า" id="customerSearchButton">
-                                <!-- The Modal -->
-                                <div id="searchModal" class="modal">
-                                    <div class="modal-content">
-                                        <!-- searching by id, name, phone number  -->
-                                        <span class="close">&times;</span>
-                                        <table>
-                                            <tr>
-                                                <td>
-                                                    รหัสลูกค้า
-                                                </td>
-                                                <td>
-                                                    <input type="number" id="customerID" name="customerID">
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>
-                                                    ชื่อ-นามสกุล ลูกค้า
-                                                </td>
-                                                <td>
-                                                    <input type="text" id="customerName" name="customerName">
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>
-                                                    หมายเลขโทรศัพท์
-                                                </td>
-                                                <td>
-                                                    <input type="text" id="customerTel" name="customerTel">
-                                                </td>
-                                            </tr>
-                                        </table>
-                                        <input class="btn" type="submit" value="ค้นหาลูกค้า">
-                                    </div>
-                                </div>
+                                <button class="btn" type="submit" id="customerSearchButton"
+                                    disabled>ค้นหาลูกค้า</button>
                             </td>
                             <td>
-                                <input class="btn" type="submit" value="เพิ่มลูกค้าใหม่">
+                                <button class="btn" type="submit" id="customerAddButton"
+                                    disabled>เพิ่มลูกค้าใหม่</button>
                             </td>
                         </tr>
                         <tr>
@@ -200,13 +167,13 @@
                                 ชื่อ-นามสกุล ลูกค้า
                             </td>
                             <td>
-                                <input type="text" id="customerName" name="customerName">
+                                <input type="text" id="customerName" name="customerName" readonly>
                             </td>
                             <td>
                                 หมายเลขโทรศัพท์
                             </td>
                             <td>
-                                <input type="text" id="customerTel" name="customerTel">
+                                <input type="text" id="customerTel" name="customerTel" readonly>
                             </td>
                         </tr>
                         <tr>
@@ -214,7 +181,7 @@
                                 ที่อยู่
                             </td>
                             <td colspan="3">
-                                <textarea id="customerAddress" name="customerAddress"></textarea>
+                                <textarea id="customerAddress" name="customerAddress" readonly></textarea>
                             </td>
                         </tr>
                     </table>
@@ -227,13 +194,13 @@
                         <tr>
                             <td>สินค้า</td>
                             <td>
-                                <select class="dropdown-field-sat" id="productName" name="productName">
+                                <select class="dropdown-field-short" id="productName" name="productName">
                                     <option value="satSet">ชุดจานดาวเทียม</option>
                                 </select>
                             </td>
                             <td>ยี่ห้อ</td>
                             <td>
-                                <select id="productBrand" class="dropdown-field-sat" name="productBrand">
+                                <select id="productBrand" class="dropdown-field-short" name="productBrand">
                                     <option value="Brand">Product Brand</option>
                                     <!-- data from brand table -->
                                 </select>
@@ -242,15 +209,15 @@
                         <tr>
                             <td>รุ่น LNB</td>
                             <td>
-                                <input type="text" class="table-field-sat" id="LNBModel" name="LNBModel">
+                                <input type="text" class="table-field-short" id="LNBModel" name="LNBModel">
                             </td>
                             <td>หมายเลขเครื่อง LNB</td>
                             <td>
-                                <input type="text" class="table-field-sat" id="LNBSN" name="LNBSN">
+                                <input type="text" class="table-field-short" id="LNBSN" name="LNBSN">
                             </td>
                         </tr>
                     </table>
-                    <table>
+                    <table class="product-table">
                         <span>กล่องรับสัญญาณ</span>
                         <tr>
                             <th>รุ่น</th>
@@ -268,7 +235,7 @@
                     <input class="add-btn" type="submit" value="เพิ่ม">
                     <div class="qty">
                         <span>จำนวนกล่องรับสัญญาณ</span>
-                        <input type="number" id="productQty" name="productQty">
+                        <span id="productQty" name="productQty">0</span>
                         <span>กล่อง</span>
                     </div>
                 </div>
@@ -280,7 +247,7 @@
                     <label for="productEquip">ไม่มี</label>
                     <input type="radio" id="productEquip" name="productEquip">
                     <label for="productEquip">มี</label>
-                    <table>
+                    <table class="product-table">
                         <tr>
                             <th>รหัสอุปกรณ์</th>
                             <th>ชื่ออุปกรณ์</th>
@@ -291,7 +258,7 @@
                                 <input type="number" class="table-field" id="equipmentID" name="equipmentID">
                             </td>
                             <td>
-                                <input type="text" class="table-field" id="equipmentName" name="equipmentName">
+                                <input type="text" class="table-field-long" id="equipmentName" name="equipmentName" readonly>
                             </td>
                             <td>
                                 <input type="number" class="table-field" id="equipmentQty" name="equipmentQty">
@@ -301,7 +268,7 @@
                     <input class="add-btn" type="submit" value="เพิ่ม">
                     <div class="qty">
                         <span>จำนวนอุปกรณ์</span>
-                        <input type="number" id="equipQty" name="equipQty">
+                        <span id="equipQty" name="equipQty">0</span>
                         <span>ชิ้น</span>
                     </div>
                 </div>
@@ -319,7 +286,7 @@
                                 </td>
                                 <td colspan="2">
                                     <!-- display only -->
-                                    <textarea id="instLocation" name="instLocation"></textarea>
+                                    <textarea id="instLocation" name="instLocation" readonly></textarea>
                                 </td>
                             </tr>
                             <tr>
