--- a/view_pages/installation_wh_view.html
+++ b/view_pages/installation_wh_view.html
@@ -13,11 +13,11 @@
                 <table>
                     <tr>
                         <td>
-                            <input type="radio" id="partnerType" name="partnerType" value="whSet">
+                            <input type="radio" id="partnerType" name="partnerType" value="whSet" readonly>
                             <label for="partnerType">ติดตั้งใหม่</label>
                         </td>
                         <td>
-                            <input type="radio" id="partnerType" name="partnerType" value="whFix">
+                            <input type="radio" id="partnerType" name="partnerType" value="whFix" readonly>
                             <label for="partnerType">แก้ไขและซ่อมแซม</label>
                         </td>
                     </tr>
@@ -35,10 +35,10 @@
                     <tr>
                         <td>เลขที่ใบงานติดตั้ง</td>
                         <td>
-                            <input type="number" id="refJobID" name="refJobID">
+                            <input type="number" id="refJobID" name="refJobID" readonly>
                         </td>
                         <td>
-                            <button class="showRef-btn" id="showRefButton">แสดงข้อมูล</button>
+                            <button class="showRef-btn" id="showRefButton" disabled>แสดงข้อมูล</button>
                         </td>
                     </tr>
                 </table>
@@ -52,7 +52,7 @@
                         <tr>
                             <td>วันที่-เวลา ขาย</td>
                             <td>
-                                <input type="datetime" id="purchaseDate" name="purchaseDate">
+                                <input type="datetime" id="purchaseDate" name="purchaseDate" readonly>
                             </td>
                         </tr>
                         <tr>
@@ -70,7 +70,7 @@
                             <!-- display only -->
                             <td>ชื่อพนักงาน</td>
                             <td>
-                                <input type="text" id="staffName" name="staffName">
+                                <input type="text" id="staffName" name="staffName" readonly>
                             </td>
                         </tr>
                         <tr>
@@ -100,13 +100,13 @@
                         <tr>
                             <td>เลขที่ใบงานติดตั้ง</td>
                             <td>
-                                <input type="text" id="installJobID" name="installJobID"> <!-- auto generate -->
+                                <input type="text" id="installJobID" name="installJobID" readonly> <!-- auto generate -->
                             </td>
                         </tr>
                         <tr>
                             <td>วันที่-เวลา การนัดหมาย</td>
                             <td>
-                                <input type="datetime" id="appointmentDate" name="appointmentDate">
+                                <input type="datetime" id="appointmentDate" name="appointmentDate" readonly>
                             </td>
                         </tr>
                         <tr>
@@ -127,7 +127,7 @@
                             <!-- display only -->
                             <td>ชื่อพนักงาน</td>
                             <td>
-                                <input type="text" id="staffName" name="staffName">
+                                <input type="text" id="staffName" name="staffName" readonly>
                             </td>
                         </tr>
                     </table>
@@ -146,48 +146,13 @@
                             รหัสลูกค้า
                         </td>
                         <td>
-                            <input type="number" id="customerID" name="customerID">
+                            <input type="number" id="customerID" name="customerID" readonly>
                         </td>
                         <td>
-                            <!-- pop up modal form when search -->
-                            <input class="btn" type="submit" value="ค้นหาลูกค้า" id="customerSearchButton">
-                            <!-- The Modal -->
-                            <div id="searchModal" class="modal">
-                                <div class="modal-content">
-                                    <!-- searching by id, name, phone number  -->
-                                    <span class="close">&times;</span>
-                                    <table>
-                                        <tr>
-                                            <td>
-                                                รหัสลูกค้า
-                                            </td>
-                                            <td>
-                                                <input type="number" id="customerID" name="customerID">
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                ชื่อ-นามสกุล ลูกค้า
-                                            </td>
-                                            <td>
-                                                <input type="text" id="customerName" name="customerName">
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                หมายเลขโทรศัพท์
-                                            </td>
-                                            <td>
-                                                <input type="text" id="customerTel" name="customerTel">
-                                            </td>
-                                        </tr>
-                                    </table>
-                                    <input class="btn" type="submit" value="ค้นหาลูกค้า">
-                                </div>
-                            </div>
+                            <button class="btn" type="submit" id="customerSearchButton" disabled>ค้นหาลูกค้า</button>
                         </td>
                         <td>
-                            <input class="btn" type="submit" value="เพิ่มลูกค้าใหม่">
+                            <button class="btn" type="submit" id="customerAddButton" disabled>เพิ่มลูกค้าใหม่</button>
                         </td>
                     </tr>
                     <tr>
@@ -195,13 +160,13 @@
                             ชื่อ-นามสกุล ลูกค้า
                         </td>
                         <td>
-                            <input type="text" id="customerName" name="customerName">
+                            <input type="text" id="customerName" name="customerName" readonly>
                         </td>
                         <td>
                             หมายเลขโทรศัพท์
                         </td>
                         <td>
-                            <input type="text" id="customerTel" name="customerTel">
+                            <input type="text" id="customerTel" name="customerTel" readonly>
                         </td>
                     </tr>
                     <tr>
@@ -209,7 +174,7 @@
                             ที่อยู่
                         </td>
                         <td colspan="3">
-                            <textarea id="customerAddress" name="customerAddress"></textarea>
+                            <textarea id="customerAddress" name="customerAddress" readonly></textarea>
                         </td>
                     </tr>
                 </table>
@@ -222,28 +187,28 @@
                 <p>รายละเอียดสินค้า</p>
                 <table>
                     <tr>
-                        <th>สินค้า</th>
-                        <th>ยี่ห้อ</th>
-                        <th>รุ่น</th>
-                        <th>หมายเลขเครื่อง</th>
-                    </tr>
-                    <tr>
+                        <td>สินค้า</td>
                         <td>
-                            <select class="dropdown-field-sat" id="productName" name="productName">
+                            <select class="dropdown-field-short" id="productName" name="productName">
                                 <option value="whSet">เครื่องทำน้ำอุ่น</option>
                             </select>
                         </td>
+                        <td>ยี่ห้อ</td>
                         <td>
-                            <select id="productBrand" class="dropdown-field" name="productBrand">
+                            <select id="productBrand" class="dropdown-field-short" name="productBrand">
                                 <option value="Brand">Product Brand</option>
                                 <!-- data from brand table -->
                             </select>
                         </td>
+                    </tr>
+                    <tr>
+                        <td>รุ่น</td>
                         <td>
-                            <input type="text" class="table-field" id="productModel" name="productModel">
+                            <input type="text" class="table-field-short" id="productModel" name="productModel">
                         </td>
+                        <td>หมายเลขเครื่อง</td>
                         <td>
-                            <input type="text" class="table-field" id="productSN" name="productSN">
+                            <input type="text" class="table-field-short" id="productSN" name="productSN">
                         </td>
                     </tr>
                 </table>
@@ -256,7 +221,7 @@
                 <label for="productEquip">ไม่มี</label>
                 <input type="radio" id="productEquip" name="productEquip">
                 <label for="productEquip">มี</label>
-                <table>
+                <table class="product-table">
                     <tr>
                         <th>รหัสอุปกรณ์</th>
                         <th>ชื่ออุปกรณ์</th>
@@ -267,7 +232,7 @@
                             <input type="number" class="table-field" id="equipmentID" name="equipmentID">
                         </td>
                         <td>
-                            <input type="text" class="table-field" id="equipmentName" name="equipmentName">
+                            <input type="text" class="table-field-long" id="equipmentName" name="equipmentName" readonly>
                         </td>
                         <td>
                             <input type="number" class="table-field" id="equipmentQty" name="equipmentQty">
@@ -277,7 +242,7 @@
                 <input class="add-btn" type="submit" value="เพิ่ม">
                 <div class="qty">
                     <span>จำนวนอุปกรณ์</span>
-                    <input type="number" id="equipQty" name="equipQty">
+                    <span id="equipQty" name="equipQty">0</span>
                     <span>ชิ้น</span>
                 </div>
             </div>
@@ -295,7 +260,7 @@
                             </td>
                             <td colspan="2">
                                 <!-- display only -->
-                                <textarea id="instLocation" name="instLocation"></textarea>
+                                <textarea id="instLocation" name="instLocation" readonly></textarea>
                             </td>
                         </tr>
                         <tr>
