Edit customer search modal and date fields

--- a/forms/import_form.html
+++ b/forms/import_form.html
@@ -14,7 +14,7 @@
                     <tr>
                         <td>วันที่เอกสาร</td>
                         <td>
-                            <input type="datetime" id="importDocDate" name="importDocDate">
+                            <input type="date" id="importDocDate" name="importDocDate">
                         </td>
                         <td>เลขที่เอกสาร</td>
                         <td>
@@ -25,7 +25,7 @@
                     <tr>
                         <td>วันที่เอกสารอ้างอิง</td>
                         <td>
-                            <input type="datetime" id="refImportDocDate" name="importDocDate">
+                            <input type="date" id="refImportDocDate" name="importDocDate">
                         </td>
                         <td>เลขที่เอกสารอ้างอิง</td>
                         <td>
