--- a/forms/returning_form.html
+++ b/forms/returning_form.html
@@ -14,7 +14,7 @@
                     <tr>
                         <td>วันที่การบันทึกส่งคืน</td>
                         <td>
-                            <input type="datetime" id="recieveDate" name="recieveDate">
+                            <input type="date" id="recieveDate" name="recieveDate">
                         </td>
                         <td>เลขที่ส่งคืนบริษัท</td>
                         <td>
@@ -34,7 +34,7 @@
                         </td>
                         <td>ยี่ห้อ</td>
                         <td>
-                            <select id="productBrand" class="dropdown-field" name="productBrand">
+                            <select id="productBrand" class="dropdown-field-short" name="productBrand">
                                 <option value="Brand">Product Brand</option>
                                 <!-- data from brand table -->
                             </select>
