--- a/forms/installation_sat_form.html
+++ b/forms/installation_sat_form.html
@@ -161,32 +161,12 @@
                                     <div class="modal-content">
                                         <!-- searching by id, name, phone number  -->
                                         <span class="close">&times;</span>
-                                        <table>
-                                            <tr>
-                                                <td>
-                                                    รหัสลูกค้า
-                                                </td>
-                                                <td>
-                                                    <input type="number" id="customerID" name="customerID">
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>
-                                                    ชื่อ-นามสกุล ลูกค้า
-                                                </td>
-                                                <td>
-                                                    <input type="text" id="customerName" name="customerName">
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>
-                                                    หมายเลขโทรศัพท์
-                                                </td>
-                                                <td>
-                                                    <input type="text" id="customerTel" name="customerTel">
-                                                </td>
-                                            </tr>
-                                        </table>
+                                        <select id="searchDropdown" name="searchDropdown">
+                                            <option value="customerID">รหัสลูกค้า</option>
+                                            <option value="customerName">ชื่อ-นามสกุล ลูกค้า</option>
+                                            <option value="customerTel">หมายเลขโทรศัพท์</option>
+                                        </select>
+                                        <input type="search" id="searchField" name="searchField">
                                         <input class="btn" type="submit" value="ค้นหาลูกค้า">
                                     </div>
                                 </div>
@@ -291,7 +271,8 @@
                                 <input type="number" class="table-field" id="equipmentID" name="equipmentID">
                             </td>
                             <td>
-                                <input type="text" class="table-field-long" id="equipmentName" name="equipmentName" readonly>
+                                <input type="text" class="table-field-long" id="equipmentName" name="equipmentName"
+                                    readonly>
                             </td>
                             <td>
                                 <input type="number" class="table-field" id="equipmentQty" name="equipmentQty">
