--- a/view_pages/import_view.html
+++ b/view_pages/import_view.html
@@ -7,6 +7,7 @@
 
 <body>
     <h1 id="pageHeader">รับสินค้า</h1>
+    <button class="delete-btn" id="deleteButton">ลบเอกสาร</button>
     <form action="#">
         <div class="row">
             <div class="importDetail">
@@ -19,7 +20,7 @@
                         <td>เลขที่เอกสาร</td>
                         <td>
                             <!-- auto generate -->
-                            <input type="number" id="importDocID" name="importDocID">
+                            <input type="number" id="importDocID" name="importDocID" readonly>
                         </td>
                     </tr>
                     <tr>
@@ -39,34 +40,16 @@
                             <input type="number" id="supplierID" name="supplierID">
                         </td>
                         <td>
-                            <!-- pop up modal form when search -->
-                            <input class="btn" type="submit" value="ค้นหาผู้จัดจำหน่าย">
-                            <!-- The Modal -->
-                            <div id="searchModal" class="modal">
-                                <div class="modal-content">
-                                    <!-- searching by id, name, phone number  -->
-                                    <table>
-                                        <tr>
-                                            <td>
-                                                ชื่อผู้จัดจำหน่าย
-                                            </td>
-                                            <td>
-                                                <input type="text" id="supplierName" name="supplierName">
-                                            </td>
-                                        </tr>
-                                    </table>
-                                    <input class="btn" type="submit" value="ค้นหาผู้จัดจำหน่าย">
-                                </div>
-                            </div>
+                            <button class="btn" id="supplierSearchButton" disabled>ค้นหาผู้จัดจำหน่าย</button>
                         </td>
                         <td>
-                            <input class="btn" type="submit" value="เพิ่มผู้จัดจำหน่ายใหม่">
+                            <button class="btn" id="supplierAddButton" disabled>เพิ่มผู้จัดจำหน่ายใหม่</button>
                         </td>
                     </tr>
                     <tr>
                         <td>ชื่อผู้จัดจำหน่าย</td>
                         <td colspan="3">
-                            <input type="text" class="long-name" id="importSupplier" name="importSupplier">
+                            <input type="text" class="long-name" id="importSupplier" name="importSupplier" readonly>
                         </td>
                     </tr>
                 </table>
@@ -85,16 +68,15 @@
                     </tr>
                     <tr>
                         <td>
-                            <!-- auto generate -->
                             <input type="number" class="table-field" id="importID" name="importID">
                         </td>
                         <td>
-                            <!-- diimportlay only -->
-                            <input type="text" class="table-field" id="importName" name="importName">
+                            <!-- display only -->
+                            <input type="text" class="table-field" id="importName" name="importName" readonly>
                         </td>
                         <td>
-                            <!-- diimportlay only -->
-                            <input type="text" class="table-field" id="importFor" name="importFor">
+                            <!-- display only -->
+                            <input type="text" class="table-field" id="importFor" name="importFor" readonly>
                         </td>
                         <td>
                             <input type="number" class="table-field" id="importQty" name="importQty">
@@ -113,12 +95,12 @@
                             <input type="number" class="table-field" id="importID" name="importID">
                         </td>
                         <td>
-                            <!-- diimportlay only -->
-                            <input type="text" class="table-field" id="importName" name="importName">
+                            <!-- display only -->
+                            <input type="text" class="table-field" id="importName" name="importName" readonly>
                         </td>
                         <td>
-                            <!-- diimportlay only -->
-                            <input type="text" class="table-field" id="importFor" name="importFor">
+                            <!-- display only -->
+                            <input type="text" class="table-field" id="importFor" name="importFor" readonly>
                         </td>
                         <td>
                             <input type="number" class="table-field" id="importQty" name="importQty">
@@ -137,12 +119,12 @@
                             <input type="number" class="table-field" id="importID" name="importID">
                         </td>
                         <td>
-                            <!-- diimportlay only -->
-                            <input type="text" class="table-field" id="importName" name="importName">
+                            <!-- display only -->
+                            <input type="text" class="table-field" id="importName" name="importName" readonly>
                         </td>
                         <td>
-                            <!-- diimportlay only -->
-                            <input type="text" class="table-field" id="importFor" name="importFor">
+                            <!-- display only -->
+                            <input type="text" class="table-field" id="importFor" name="importFor" readonly>
                         </td>
                         <td>
                             <input type="number" class="table-field" id="importQty" name="importQty">
