--- a/view_pages/repairing_view.html
+++ b/view_pages/repairing_view.html
@@ -7,6 +7,7 @@
 
 <body>
     <h1 id="pageHeader">ข้อมูลบริการซ่อม</h1>
+    <button class="delete-btn" id="deleteButton">ลบข้อมูล</button>
     <form action="#">
         <div class="row">
             <div class="column">
@@ -25,7 +26,7 @@
                         <tr>
                             <td style="font-size: 11pt;">วันที่หมดอายุการรับประกัน: </td>
                             <td>
-                                <input type="datetime" id="warrantyDate" name="warrantyDate">
+                                <input type="date" id="warrantyDate" name="warrantyDate">
                             </td>
                         </tr>
                         <tr>
@@ -74,20 +75,20 @@
                         <tr>
                             <td>เลขที่งานซ่อม</td>
                             <td>
-                                <input type="number" id="deliveryJobID" name="deliveryJobID"> <!-- auto generate -->
+                                <input type="number" id="deliveryJobID" name="deliveryJobID" readonly> <!-- auto generate -->
                             </td>
                         </tr>
                         <tr>
                             <td>วันที่-เวลา รับเครื่อง</td>
                             <td>
-                                <input type="datetime" id="jobReceiveDate" name="jobReceiveDate">
+                                <input type="datetime" id="jobReceiveDate" name="jobReceiveDate" readonly>
                             </td>
                         </tr>
                         <!-- enable if need pick up -->
                         <tr>
                             <td>วันที่-เวลา การนัดหมาย</td>
                             <td>
-                                <input type="datetime" id="appointmentDate" name="appointmentDate">
+                                <input type="datetime" id="appointmentDate" name="appointmentDate" readonly>
                             </td>
                         </tr>
                         <tr>
@@ -101,14 +102,14 @@
                         <tr>
                             <td>รหัสพนักงาน</td>
                             <td>
-                                <input type="number" id="staffID" name="staffID">
+                                <input type="number" id="staffID" name="staffID" readonly>
                             </td>
                         </tr>
                         <tr>
                             <!-- display only -->
                             <td>ชื่อพนักงาน</td>
                             <td>
-                                <input type="text" id="staffName" name="staffName">
+                                <input type="text" id="staffName" name="staffName" readonly>
                             </td>
                         </tr>
                     </table>
@@ -125,7 +126,7 @@
                             รหัสลูกค้า
                         </td>
                         <td>
-                            <input type="number" id="customerID" name="customerID">
+                            <input type="number" id="customerID" name="customerID" readonly>
                         </td>
                         <td>
                             <!-- pop up modal form when search -->
@@ -134,32 +135,13 @@
                             <div id="searchModal" class="modal">
                                 <div class="modal-content">
                                     <!-- searching by id, name, phone number  -->
-                                    <table>
-                                        <tr>
-                                            <td>
-                                                รหัสลูกค้า
-                                            </td>
-                                            <td>
-                                                <input type="number" id="customerID" name="customerID">
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                ชื่อ-นามสกุล ลูกค้า
-                                            </td>
-                                            <td>
-                                                <input type="text" id="customerName" name="customerName">
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                หมายเลขโทรศัพท์
-                                            </td>
-                                            <td>
-                                                <input type="text" id="customerTel" name="customerTel">
-                                            </td>
-                                        </tr>
-                                    </table>
+                                    <span class="close">&times;</span>
+                                    <select id="searchDropdown" name="searchDropdown">
+                                        <option value="customerID">รหัสลูกค้า</option>
+                                        <option value="customerName">ชื่อ-นามสกุล ลูกค้า</option>
+                                        <option value="customerTel">หมายเลขโทรศัพท์</option>
+                                    </select>
+                                    <input type="search" id="searchField" name="searchField">
                                     <input class="btn" type="submit" value="ค้นหาลูกค้า">
                                 </div>
                             </div>
@@ -173,13 +155,13 @@
                             ชื่อ-นามสกุล ลูกค้า
                         </td>
                         <td>
-                            <input type="text" id="customerName" name="customerName">
+                            <input type="text" id="customerName" name="customerName" readonly>
                         </td>
                         <td>
                             หมายเลขโทรศัพท์
                         </td>
                         <td>
-                            <input type="text" id="customerTel" name="customerTel">
+                            <input type="text" id="customerTel" name="customerTel" readonly>
                         </td>
                     </tr>
                     <tr>
@@ -187,7 +169,7 @@
                             ที่อยู่
                         </td>
                         <td colspan="3">
-                            <textarea id="customerAddress" name="customerAddress"></textarea>
+                            <textarea id="customerAddress" name="customerAddress" readonly></textarea>
                         </td>
                     </tr>
                 </table>
@@ -200,11 +182,11 @@
                     <tr>
                         <td>สินค้า</td>
                         <td>
-                            <input type="text" id="productName" name="productName">
+                            <input type="text" id="productName" name="productName" readonly>
                         </td>
                         <td>ยี่ห้อ</td>
                         <td>
-                            <select id="productBrand" class="dropdown-field" name="productBrand">
+                            <select id="productBrand" class="dropdown-field" name="productBrand" disabled="true">
                                 <option value="Brand">Product Brand</option>
                                 <!-- data from brand table -->
                             </select>
@@ -213,17 +195,17 @@
                     <tr>
                         <td>รุ่น</td>
                         <td>
-                            <input type="text" id="productModel" name="productModel">
+                            <input type="text" id="productModel" name="productModel" readonly>
                         </td>
                         <td>หมายเลขเครื่อง</td>
                         <td>
-                            <input type="text" id="productSN" name="productSN">
+                            <input type="text" id="productSN" name="productSN" readonly>
                         </td>
                     </tr>
                     <tr>
                         <td>สี/สภาพเครื่อง/ตำหนิ</td>
                         <td colspan="3">
-                            <textarea id="productFlaw" name="productFlaw"></textarea>
+                            <textarea id="productFlaw" name="productFlaw" readonly></textarea>
                         </td>
                     </tr>
                 </table>
@@ -236,13 +218,13 @@
                     <tr>
                         <td>คำอธิบายอาการ</td>
                         <td>
-                            <textarea id="productFailure" name="productFailure"></textarea>
+                            <textarea id="productFailure" name="productFailure" readonly></textarea>
                         </td>
                     </tr>
                     <tr>
                         <td>งบประมาณการซ่อมของลูกค้า</td>
                         <td>
-                            <input type="number" id="repairingBudget" name="repairingBudget">
+                            <input type="number" id="repairingBudget" name="repairingBudget" readonly>
                         </td>
                     </tr>
                     <tr>
@@ -253,7 +235,7 @@
                     <tr>
                         <td>จำนวนเงินวางมัดจำ/ค่าธรรมเนียมการเปิดเครื่อง</td>
                         <td>
-                            <input type="number" id="totalPaid" name="totalPaid">
+                            <input type="number" id="totalPaid" name="totalPaid" readonly>
                         </td>
                     </tr>
                 </table>
@@ -273,10 +255,10 @@
                     </tr>
                     <tr>
                         <td>
-                            <input type="text" class="table-field" id="productAcc" name="productAcc">
+                            <input type="text" class="table-field" id="productAcc" name="productAcc" readonly>
                         </td>
                         <td>
-                            <input type="number" class="table-field" id="productAccQty" name="productAccQty">
+                            <input type="number" class="table-field" id="productAccQty" name="productAccQty" readonly>
                         </td>
                     </tr>
                 </table>
